# Cognizant-GenAI-Externship

./: .gitignore  README.md
Assignment: Exploring Python Concepts/: task1.py  task2.py
assignment_exploring_string_methods/: task2.py  task3.py
explore_loops_in_python/: task1.py  task3.py
introduction_to_genAI/capstone_project/: README.md  cli_runner.py  client.py  pyproject.toml  requirements.txt  weather.py  weather_man.py
introduction_to_genAI/capstone_project/src/capstone_project/: main.py
introduction_to_genAI/exploring_pretrained_gans/: gan_assignment.html  gan_assignment.ipynb  gan_template.ipynb
introduction_to_genAI/exploring_transformers/: exploring_transformers.ipynb  transformer_template.ipynb
introduction_to_genAI/exploring_transformers/.virtual_documents/: exploring_transformers.ipynb  transformer_template.ipynb
introduction_to_genAI/fine_tuning_BERT/: fine_tuning_BERT.ipynb
introduction_to_python/assignments/about_parameters_of_functions/: tasks.py
introduction_to_python/assignments/errors_knowledge_check/: tasks.py
introduction_to_python/assignments/explore_loops_in_python/: task2.py
introduction_to_python/assignments/exploring_python_concepts/: task3.py
introduction_to_python/assignments/exploring_string_methods/: task1.py
introduction_to_python/assignments/python_data_structures/: task1.py  task2.py  task3.py
introduction_to_python/projects/about_menu/: about_menu.py
introduction_to_python/projects/calculator_with_error_handling/: calculator.py  error_log.txt
project_number_guessing_game/: number_guessing_game.py
(+3 files in other folders)
